--- a/.gitignore
+++ b/.gitignore
@@ -1,40 +1,42 @@
 # The directory Mix will write compiled artifacts to.
-/_build/
+discuss/_build/
 
 # If you run "mix test --cover", coverage assets end up here.
-/cover/
+discuss/cover/
 
 # The directory Mix downloads your dependencies sources to.
-/deps/
+discuss/deps/
 
 # Where 3rd-party dependencies like ExDoc output generated docs.
-/doc/
+discuss/doc/
 
 # Ignore .fetch files in case you like to edit your project deps locally.
-/.fetch
+discuss/.fetch
 
 # If the VM crashes, it generates a dump, let's ignore it too.
-erl_crash.dump
+discuss/erl_crash.dump
 
 # Also ignore archive artifacts (built via "mix archive.build").
-*.ez
+discuss/*.ez
 
 # Temporary files, for example, from tests.
-/tmp/
+discuss/tmp/
 
 # Ignore package tarball (built via "mix hex.build").
-discuss-*.tar
+discuss/discuss-*.tar
 
 # Ignore assets that are produced by build tools.
-/priv/static/assets/
+discuss/priv/static/assets/
 
 # Ignore digested assets cache.
-/priv/static/cache_manifest.json
+discuss/priv/static/cache_manifest.json
 
 # In case you use Node.js/npm, you want to ignore these.
-npm-debug.log
-/assets/node_modules/
+discuss/npm-debug.log
+discuss/assets/node_modules/
 
 # Remove certs
-certs/
+/**/certs/*
+
+pgdata/
 
